# openQA

./: .codecov.yml  .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .gitlint  .jsbeautifyrc  .mergify.yml  .npmrc  .openqa-travis.enc  .perlcriticrc  .perltidyrc  .readthedocs.yaml  .stylelintrc.json  .tidyallrc  .travis.yml  .vimrc  .yamllint  .yamltidy  AGENTS.md  CNAME  COPYING  DEPENDENCIES.txt  Dockerfile  LICENSE-GPL3.txt  LICENSE-MIT-jquery-ujs.txt  LICENSE.MIT-Chosen.md.txt  Makefile  README  README.asciidoc  README.md  _config.yml  codecov.yml  contact.html  cpanfile  db.sql  dependencies.yaml  documentation.html  downloads.html  eslint.config.mjs  (+14 more)
.circleci/: README.asciidoc  autoinst.sha  build_autoinst.sh  build_cache.sh  build_dependencies.sh  build_local_container.sh  build_local_docker.sh  ci-packages.txt  config.yml  dependencies.txt  prepare_dependency_pr.sh  run_unit_tests.sh  stress_tests.txt  unstable_tests.txt
.devcontainer/: devcontainer.json
.github/: checklist.yml  dependabot.yml  stale.yml
.obs/: workflows.yml
_includes/: api.html  footer.html  head.html  header.html
_layouts/: default.html
apparmor.d/: srv.www.cgi-bin.currentresults  srv.www.cgi-bin.resultdetails  usr.sbin.rsyncd
assets/: assetpack.db  assetpack.def  assetpack.yml  job.yaml
changedb/: recentchanges.pl  shownew.pl
config/: env.sh
container/: README.md  deploy_openqa_containers.sh  deployer.sh
contrib/: agama-openqa-worker.jsonnet  ay-openqa-worker-leap-3-nvme.xml  ay-openqa-worker-leap.xml  ay-openqa-worker.xml  ay-openqa-worker.xml.erb
docker/: README.md  direct_test.m4  direct_test05-scheduler-full.Dockerfile  direct_test33-developer_mode.Dockerfile  direct_test_cache  direct_testfull-stack.Dockerfile  direct_tests.Dockerfile  direct_tests_ui.Dockerfile  setup_single_instance.dockerfile
docs/: 194717-ensure-code-executed-on-worker-is-confined.md  Advanced_configuration.asciidoc  Branding.asciidoc  Branding.md  Client.asciidoc  Client.md  ContainerizedSetup.asciidoc  ContainerizedSetup.md  Contributing.asciidoc  Contributing.md  Development.asciidoc  ExternalResults.asciidoc  ExternalResults.md  Filesystem_Layout.asciidoc  Gemfile  GettingStarted.asciidoc  GettingStarted.md  Installation.asciidoc  Installing.asciidoc  Installing.md  Networking.asciidoc  Networking.md  Pitfalls.asciidoc  Pitfalls.md  PrivacyPolicy.asciidoc  PrivacyPolicy.md  Settings.asciidoc  Troubleshooting.asciidoc  UsersGuide.asciidoc  UsersGuide.md  WritingTests.asciidoc  WritingTests.md  conf.py  index.asciidoc  index.html  index.md  openSUSE_Tests.asciidoc  openqa-documentation-20170102_4883d3d.html  openqa-documentation-20170102_50d6d1b.html  openqa-documentation-20170102_68df9a4.html  (+101 more)
lib/: OpenQA.pm  database.ini  db_helpers.pm  db_profiler.pm  openqa.ini
man/: openqa-label-all.1.in
public/: openapi.yaml  openqa-cli.yaml
qatests/: qa_mozmill_run.sh  qa_mozmill_setup.sh  qa_ntp.pl
schedule.d/: .gitignore
script/: check_coverage  check_dependencies  check_indent  clean_needles  client  clone_job.pl  configure-web-proxy  create_admin  docker-tests  dump-db  dump_templates  failed_needles.pl  fetchneedles  genapi.pl  generate-documentation  generate-documentation-genapi.pl  generate-packed-assets  initdb  install  isoparser.pl  load_dbdata  load_fixture  load_templates  migrate_images  modify_needle  occ  ocj  ocl  ola  openqa  openqa-auto-update  openqa-auto-upgrade  openqa-bootstrap  openqa-bootstrap-container  openqa-check-devel-repo  openqa-clean-repo-cache  openqa-cli  openqa-clone-custom-git-refspec  openqa-clone-job  openqa-config  (+50 more)
stylesheets/: responsive-video.css
systemd/: openqa-dump-db.service  openqa-dump-db.timer  openqa-enqueue-asset-and-result-cleanup.service  openqa-enqueue-asset-and-result-cleanup.timer  openqa-enqueue-asset-cleanup.service  openqa-enqueue-asset-cleanup.timer  openqa-enqueue-audit-event-cleanup.service  openqa-enqueue-audit-event-cleanup.timer  openqa-enqueue-bug-cleanup.service  openqa-enqueue-bug-cleanup.timer  openqa-enqueue-git-auto-update.service  openqa-enqueue-git-auto-update.timer  openqa-enqueue-needle-ref-cleanup.service  openqa-enqueue-needle-ref-cleanup.timer  openqa-enqueue-result-cleanup.service  openqa-enqueue-result-cleanup.timer  openqa-enqueue-scheduled-product-cleanup.service  openqa-enqueue-scheduled-product-cleanup.timer  openqa-gru.service  openqa-livehandler.service  (+22 more)
(+2463 files in other folders)
